# bypass-app

./: README.md  pyproject.toml  run_server.py
backend/: cv_parser.py  generate_pdf.py  main.py  models.py  render_pdf.py  storage.py
backend/data/: base_cv.json
backend/data/cv_json/: AliceJohnson_base_cv.json  Bob_base_cv.json  Carol_base_cv.json  Lola_base_cv.json  alice_johnson_base_cv.json  charlie_base_cv.json  daria_base_cv.json
backend/data/jobs/Alice/: 550e8400-e29b-41d4-a716.json  550e8400-test-happy-path.json
backend/data/jobs/Bob/: abc-def-123-456.json
backend/data/jobs/Carol/: xyz-789-ghi-012.json
backend/data/jobs/Lola/: 520e8400-e29b-41d4-a716.json  550e8400-e29b-41d4-a716.json
backend/data/renders/html/: output_1.html
backend/data/templates/: 1.html
backend/tests/: conftest.py  test_apply_changes.py  test_endpoints_with_logs.py  test_flow.py  test_models.py  test_pdf_download.py
backend/tests/data/: test_data_cv_jobs.py
