[project]
name = "bypass-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "pdfplumber>=0.11.7",
    "typing>=3.10.0.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.6",
]
[tool.pyright]
venvPath = "."
venv = ".venv"
